--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.5",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
